by_date/lab0425/simpleCanary/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  type: ClusterIP
  selector:
    app: web
    # version: "" # <-- 이 부분 조정해 v1/v2 접속 제어
  ports:
  - port: 80        #클러스터 ip의 포트
    targetPort: 80  #pod의 포트
